<resources>
    <string name="app_name">Mvvm Kotlin Sample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="gists">Gists</string>
    <string name="repos">Repositories</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="git_username">Github username</string>
    <string name="location">Location</string>
    <string name="submit">Submit</string>
    <string name="company">Company</string>
    <string name="need_username">Enter your profileEntity username</string>
    <string name="no_repos_found">No Repository Found</string>
    <string name="no_gists_found">No Gists Found</string>
    <string name="no_followers_found">No Followers Found</string>
    <string name="no_following_found">No Following Found</string>
    <string name="something_went_wrong">Something went wrong, please try again later!!</string>
</resources>